Fix: Specify Node.js 20+ requirement for Railway deployment

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   ],
   "author": "FabrikGroup",
   "license": "ISC",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
     "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "ejs": "^3.1.10",
